tests/bad/basic/function_too_many_params.spl
int sum(int a, int b)
{
    return a + b;
}

int main()
{
    printInt(sum(1, 2, 3));
    return 0;
}
